<resources>
    <string name="app_name">Client App</string>

    <string name="hint_input">Enter Message</string>
    <string name="error_invalid_input">Invalid Input!</string>
    <string name="msg_wait">Wait for response!</string>
    <string name="error_invocation_failed">Remote Invocation Failed!</string>
    <string name="error_service_not_bound">Remote Server Not Found!</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_dialog_dismiss">DISMISS</string>

    <string name="key_input">input</string>
    <string name="key_result">result</string>

    <string name="hint_value_1">Enter Value 1</string>
    <string name="hint_value_2">Enter Value 2</string>
    <string name="btn_add">ADD</string>
    <string name="btn_subtracts">SUBTRACTS</string>
    <string name="btn_multiply">MULTIPLY</string>
    <string name="btn_pow">POW</string>

    <string name="operation_add">add</string>
    <string name="operation_subtracts">subtracts</string>
    <string name="operation_multiply">multiply</string>
    <string name="operation_pow">pow</string>
    <string name="key_operation">operation</string>
    <string name="key_value_1">value1</string>
    <string name="key_value_2">value2</string>

</resources>
