<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.assignment.android.clientapp.AppEventListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_padding">

            <EditText
                android:id="@+id/et_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_regular"
                android:background="@drawable/bg_rounded_border"
                android:hint="@string/hint_input"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:minHeight="80dp"
                android:padding="@dimen/space_medium"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:background="@color/colorPrimary"
                android:onClick="@{()->listener.onSubmit()}"
                android:text="@string/btn_submit"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_large"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/btn_submit" />

            <LinearLayout
                android:id="@+id/ll_values"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xlarge"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/view_divider">

                <EditText
                    android:id="@+id/et_value_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_border"
                    android:hint="@string/hint_value_1"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/space_medium" />

                <EditText
                    android:id="@+id/et_value_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_large"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_border"
                    android:hint="@string/hint_value_2"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/space_medium" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_add"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:background="@color/colorPrimary"
                android:onClick="@{()->listener.onAdd()}"
                android:text="@string/btn_add"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_values" />

            <Button
                android:id="@+id/btn_subtracts"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:background="@color/colorPrimary"
                android:onClick="@{()->listener.onSubtracts()}"
                android:text="@string/btn_subtracts"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:background="@color/colorPrimary"
                android:onClick="@{()->listener.onMultiply()}"
                android:text="@string/btn_multiply"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_subtracts" />

            <Button
                android:id="@+id/btn_pow"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:background="@color/colorPrimary"
                android:onClick="@{()->listener.onPow()}"
                android:text="@string/btn_pow"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_multiply" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>